src/snapshots/hydra__ui__tests__agent_select_second_highlighted.snap
---
source: src/ui.rs
expression: output
---
┌ Sessions (0) ┐┌ Preview ─────────────────────────────────────────────────────┐
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││        ┌ Select Agent ──────────────┐                        │
│              ││        │   Claude                   │                        │
│              ││        │>> Codex                    │                        │
│              ││        └────────────────────────────┘                        │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
└──────────────┘└──────────────────────────────────────────────────────────────┘
 j/k: select agent  Enter: confirm  Esc: cancel
