src/snapshots/hydra__ui__tests__attached_mode.snap
---
source: src/ui.rs
expression: output
---
┌ Sessions (1) ────────┐┏ active-session ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│>> ● active-session [C│┃$ claude                                              ┃
│                      │┃Hello, how can I help?                                ┃
│                      │┃                                                      ┃
│                      │┃                                                      ┃
│                      │┃                                                      ┃
│                      │┃                                                      ┃
│                      │┃                                                      ┃
│                      │┃                                                      ┃
│                      │┃                                                      ┃
│                      │┃                                                      ┃
│                      │┃                                                      ┃
│                      │┃                                                      ┃
│                      │┃                                                      ┃
│                      │┃                                                      ┃
│                      │┃                                                      ┃
│                      │┃                                                      ┃
│                      │┃                                                      ┃
│                      │┃                                                      ┃
│                      │┃                                                      ┃
│                      │┃                                                      ┃
│                      │┃                                                      ┃
└──────────────────────┘┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
 Esc: detach  (keys forwarded to session)
