src/snapshots/hydra__ui__tests__browse_mode_copy_mode_help_bar.snap
---
source: src/ui.rs
expression: output
---
┌ Sessions (1) ┐┌ s1 ──────────────────────────────────────────────────────────┐
│── ●  Idle    ││test output                                                   │
│>> ● s1 [Claud││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
└──────────────┘└──────────────────────────────────────────────────────────────┘
 SELECT TEXT TO COPY  |  c: exit copy mode
