src/snapshots/hydra__ui__tests__browse_mode_empty.snap
---
source: src/ui.rs
expression: output
---
┌ Sessions (0) ┐┌ Preview ─────────────────────────────────────────────────────┐
│              ││No sessions. Press 'n' to create one.                         │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
└──────────────┘└──────────────────────────────────────────────────────────────┘
 j/k: nav  PgUp/Dn: scroll  Enter: compose  n: new  d: del  c: copy  q: quit
