src/snapshots/hydra__ui__tests__browse_mode_with_all_statuses.snap
---
source: src/ui.rs
expression: output
---
┌ Sessions (3) ┐┌ running-one ─────────────────────────────────────────────────┐
│── ●  Idle    ││running session output                                        │
│   ● idle-one ││                                                              │
│── ●  Running ││                                                              │
│>> ● running-o││                                                              │
│── ●  Exited  ││                                                              │
│   ● exited-on││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
└──────────────┘└──────────────────────────────────────────────────────────────┘
 j/k: nav  PgUp/Dn: scroll  Enter: compose  n: new  d: del  c: copy  q: quit
