src/snapshots/hydra__ui__tests__browse_mode_with_deletion_only_diff.snap
---
source: src/ui.rs
expression: output
---
┌ Sessions (1) ┐┌ worker-1 ────────────────────────────────────────────────────┐
│── ●  Idle    ││preview content                                               │
│>> ● worker-1 ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
└──────────────┘│                                                              │
┌ Changes ─────┐│                                                              │
│ old.rs   -20 ││                                                              │
└──────────────┘└──────────────────────────────────────────────────────────────┘
 j/k: navigate  Enter: attach  n: new  d: delete  c: copy  q: quit
