src/snapshots/hydra__ui__tests__browse_mode_with_last_messages.snap
---
source: src/ui.rs
expression: output
---
┌ Sessions (2) ┐┌ worker-1 ────────────────────────────────────────────────────┐
│── ●  Idle    ││preview                                                       │
│>> ● worker-1 ││                                                              │
│     I'll help││                                                              │
│   ● worker-2 ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
└──────────────┘└──────────────────────────────────────────────────────────────┘
 j/k: nav  PgUp/Dn: scroll  Enter: compose  n: new  d: del  c: copy  q: quit
