src/snapshots/hydra__ui__tests__browse_mode_with_long_last_message_truncated.snap
---
source: src/ui.rs
expression: output
---
┌ Sessions (1) ┐┌ worker-1 ────────────────────────────────────────────────────┐
│>> ● worker-1 ││preview                                                       │
│     This is a││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
└──────────────┘└──────────────────────────────────────────────────────────────┘
 j/k: navigate  Enter: attach  n: new  d: delete  q: quit
