src/snapshots/hydra__ui__tests__browse_mode_with_sessions.snap
---
source: src/ui.rs
expression: output
---
┌ Sessions (3) ┐┌ worker-1 ────────────────────────────────────────────────────┐
│── ●  Idle    ││some preview content                                          │
│>> ● worker-1 ││                                                              │
│   ● worker-2 ││                                                              │
│   ● research ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
└──────────────┘└──────────────────────────────────────────────────────────────┘
 j/k: nav  PgUp/Dn: scroll  Enter: compose  n: new  d: del  c: copy  q: quit
