src/snapshots/hydra__ui__tests__browse_mode_with_stats.snap
---
source: src/ui.rs
expression: output
---
┌ Sessions (1) ┐┌ worker-1 ────────────────────────────────────────────────────┐
│>> ● worker-1 ││some preview content                                          │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
└──────────────┘│                                                              │
┌ Stats ───────┐│                                                              │
│$0.18 34.7k 8✎││                                                              │
└──────────────┘│                                                              │
┌ Changes ─────┐│                                                              │
│ README.md +8 ││                                                              │
│ src/         ││                                                              │
│  app…+45-12  ││                                                              │
│  ui.rs +30-5 ││                                                              │
└──────────────┘└──────────────────────────────────────────────────────────────┘
 j/k: navigate  Enter: attach  n: new  d: delete  q: quit
