src/snapshots/hydra__ui__tests__browse_mode_with_task_elapsed.snap
---
source: src/ui.rs
expression: output
---
┌ Sessions (1) ┐┌ worker-1 ────────────────────────────────────────────────────┐
│── ●  Running ││working...                                                    │
│>> ● worker-1 ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
│              ││                                                              │
└──────────────┘└──────────────────────────────────────────────────────────────┘
 j/k: nav  PgUp/Dn: scroll  Enter: compose  n: new  d: del  c: copy  q: quit
