src/snapshots/hydra__ui__tests__compose_mode.snap
---
source: src/ui.rs
expression: output
---
┌ Sessions (1) ┐┏ Preview ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│── ●  Idle    │┃$ claude                                                      ┃
│>> ● active-se│┃Hello, how can I help?                                        ┃
│              │┃                                                              ┃
│              │┃                                                              ┃
│              │┃                                                              ┃
│              │┃                                                              ┃
│              │┃                                                              ┃
│              │┃                                                              ┃
│              │┃                                                              ┃
│              │┃                                                              ┃
│              │┃                                                              ┃
│              │┃                                                              ┃
│              │┃                                                              ┃
│              │┃                                                              ┃
│              │┃                                                              ┃
│              │┃                                                              ┃
│              │┃                                                              ┃
│              │┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
│              │╔ Compose ═════════════════════════════════════════════════════╗
│              │║                                                              ║
│              │║Enter: send | Shift+Enter: newline | Esc: cancel              ║
└──────────────┘╚══════════════════════════════════════════════════════════════╝
 Enter: send  Shift+Enter: newline  Up/Dn: history  Esc: cancel (draft kept)
